--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -357,19 +357,18 @@ body {
 /* ====== bg animation ===== */
 
 
-
 @keyframes moveCircle {
   0% {
     transform: translate(0, 0);
   }
   25% {
-    transform: translate(100px, 100px);
+    transform: translate(200px, 200px);
   }
   50% {
-    transform: translate(-100px, -100px);
+    transform: translate(-200px, -200px);
   }
   75% {
-    transform: translate(100px, -100px);
+    transform: translate(200px, -200px);
   }
   100% {
     transform: translate(0, 0);
@@ -377,7 +376,7 @@ body {
 }
 
 .animate-circle {
-  animation: moveCircle 10s infinite;
+  animation: moveCircle 20s infinite linear;
 }
 
 .animation-delay-0 {
@@ -418,7 +417,7 @@ body {
 
 @media (max-width: 768px) {
   .animate-circle {
-    animation: moveCircle 15s infinite;
+    animation: moveCircle 25s infinite linear;
   }
 
   .gradients-container div {
